--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "ascot-random-coding-challenge"
+name = "random-coding-challenge"
 version = "0.1.0"
 description = ""
 authors = ["Gareth Maddock <9137502+gtm19@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "ascot_random_coding_challenge"}]
+packages = [{include = "random_coding_challenge"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
