--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ readme = "README.md"
 packages = [{include = "random_coding_challenge"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 numpy = "^1.25.0"
 requests = "^2.31.0"
+pandas = "^2.0.3"
+scipy = "^1.11.1"
 
 
 [tool.poetry.group.dev.dependencies]
